
    o	sort(x) now produces an error when x is not atomic instead of 
	just returning x.

    o	New function is.unsorted() the C version of which also
	speeds up .Internal(sort()) for sorted input.

    o	New function integrate() with S-compatible call.

    o	New function col2rgb() for color conversion of names, hex, or integer.

    o	demo() has new arguments, mainly to be run in "make check".


BUG FIXES

    o	Unused entry points in `src/appl/fortran.c' and `Fortran.h'
	have been removed.

    o	Unused directory src/f2clib and header src/include/R_ext/f2c.h
	have been removed.

    o	plot(1:2, xaxs = "i") now gives both "1.0" and "2.0" x-axis labels.

    o	symnum(x) behaves more reasonably for zero length or non-numeric x.



	**************************************************
	*						 *
	*	       1.2 SERIES NEWS			 *
	*						 *
	**************************************************


		CHANGES IN R VERSION 1.2.3

NEW FEATURES

    o	Support for configuration and building the Unix version of R
	 under Mac OS X.  (The `classic' Macintosh port is
	`Carbonized' and also runs under that OS.)


BUG FIXES

    o	`Writing R Extensions' incorrectly described an entry point
	`fmod' which was not included in the R binary on most systems.
	The entry point has been removed, to avoid any confusion with
	the standard C entry point of the same name.

    o	Printing of kernels in package ts was unreliable: the internal
	representation was correct.

    o	A problem with "..." in substitutions has been fixed (PR#860). 

    o	Various strangeness with match.call() and "..." has been fixed
	(PR#813).

    o	sys.function() could return an unevaluated promise, messing up
	formals() and match.arg() (PR#872)

    o	Deparsing or dumping attributes with non-standard names was
	not quoting the name (PR#871).

    o	We now use match.fun() in tapply() so that it won't get trapped
	by non-functions masking FUN.

    o	The `nmax' argument in scan(what=list(...), nmax=300) was