@@ -25,7 +25,7 @@ use R::Rdconv;
 use R::Rdlists;
 use R::Utils;
 
-my $revision = ' $Revision: 1.26 $ ';
+my $revision = ' $Revision: 1.27 $ ';
 my $version;
 my $name;
 
@@ -45,7 +45,7 @@ $dir_mod = 0755;#- Permission ('mode') of newly created directories.
 
 if($opt_dosnames){$HTML="htm";} else{$HTML="html";}
 
-my $cwd = getcwd();
+my $current = cwd();
 if($opt_rhome){
     $R_HOME=$opt_rhome;
     print STDERR "R_HOME from --rhome: `$R_HOME'\n" if $opt_debug;
@@ -56,10 +56,10 @@ elsif($ENV{"R_HOME"}){
 }
 else{
     chdir(dirname($0) . "/..");
-    $R_HOME=getcwd();
+    $R_HOME = cwd();
 }
-chdir($cwd);
-print STDERR "Current directory (cwd): `$cwd'\n" if $opt_debug;
+chdir($current);
+print STDERR "Current directory (cwd): `$current'\n" if $opt_debug;
 
 # if option --htmllists is set we only rebuild some list files and
 # exit
