@@ -33,7 +33,7 @@ use R::Rd;
 ## don't buffer output
 $|=1;
 
-my $revision = ' $Revision: 1.22 $ ';
+my $revision = ' $Revision: 1.23 $ ';
 my $version;
 my $name;
 $revision =~ / ([\d\.]*) /;
@@ -65,7 +65,7 @@ GetOptions (@knownoptions) || usage();
 R_version("R add-on package builder", $version) if $opt_version;
 usage() if $opt_help;
 
-my $startdir=getcwd();
+my $startdir=cwd();
 
 my $R_platform = R_getenv("R_PLATFORM", "unknown-binary");
 
@@ -234,7 +234,7 @@ sub prepare_pkg {
     my ($pkg, $in_bundle, $description, $log) = @_;
 
     chdir($pkg);
-    my $pkgdir = getcwd();
+    my $pkgdir = cwd();
     my $pkgname = basename($pkg);
 
     if(-d "src"){
