@@ -31,7 +31,7 @@ use R::Utils;
 ## don't buffer output
 $|=1;
 
-my $revision = ' $Revision: 1.29 $ ';
+my $revision = ' $Revision: 1.30 $ ';
 my $version;
 my $name;
 $revision =~ / ([\d\.]*) /;
@@ -55,11 +55,11 @@ $opt_examples = 0 if $opt_no_examples;
 $opt_tests = 0 if $opt_no_tests;
 $opt_latex = 0 if $opt_no_latex;
 
-my $startdir=getcwd();
+my $startdir=cwd();
 $opt_outdir=$startdir unless $opt_outdir;
 chdir($opt_outdir) ||
     die "Error: cannot change to directory \`$opt_outdir'\n";
-my $outdir=getcwd();
+my $outdir=cwd();
 chdir($startdir);
 
 my $R_HOME = $ENV{'R_HOME'} ||
@@ -85,7 +85,7 @@ my $library;
 if($opt_library){
     chdir($opt_library) ||
 	die "Error: cannot change to directory \`$opt_library'\n";
-    $library=getcwd();
+    $library=cwd();
     if($WINDOWS){
 	$ENV{'R_LIBS'} = "$library;$R_LIBS";
     }
@@ -136,7 +136,7 @@ foreach $pkg (@ARGV){
     (-d $pkg) || die "Error: package dir \`$pkg' does not exist";
     chdir($pkg) ||
 	die "Error: cannot change to directory \`$pkg'\n";
-    my $pkgdir = getcwd();
+    my $pkgdir = cwd();
     my $pkgname = basename($pkgdir);
     chdir($startdir);
 
@@ -228,7 +228,7 @@ sub check_pkg {
     if(-d $pkg) {
 	chdir($pkg) ||
 	    die "Error: cannot change to directory \`$pkg'\n";
-	$pkgdir = getcwd();
+	$pkgdir = cwd();
 	$pkgname = basename($pkgdir);
     }
     else {
